k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restroplate-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: api.restroplate.local
      http:
        paths:
          - path: /((api/auth|api/users)(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity-service
                port:
                  number: 80
          - path: /((api/donations|api/donation-requests)(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: donation-service
                port:
                  number: 80
          - path: /((api/inventory|api/donation-claims)(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-service
                port:
                  number: 80
          - path: /((api/public)(/|$).*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: public-service
                port:
                  number: 80
